test-suite/output/ErrorLocation_12152_2.out
File "./output/ErrorLocation_12152_2.v", line 3, characters 0-8:
Error: No product even after head-reduction.

