test-suite/output/ErrorLocation_12152_2.v
(* Reported in #12152 *)
Goal True.
intros H; auto.
Abort.
